lanecwe-Prod/src/objects/Company__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Companies</relationshipLabel>
        <relationshipName>Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue_FairFax__c</fullName>
        <description>APAC enriched data - Annual Revenue Range - sourced from Fair Fax</description>
        <inlineHelpText>APAC enriched data - Annual Revenue Range - sourced from Fair Fax</inlineHelpText>
        <label>Annual Revenue Range FairFax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billed_Rev_Prev_13_Months__c</fullName>
        <label>Billed Rev. - Prev. 13 Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CLIENT_COUNT__c</fullName>
        <label>CLIENT_COUNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channel_New__c</fullName>
        <formula>TEXT( Owner_Copy__r.Channel__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel-New</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>ADM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Conferencing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Care/Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Commerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECS Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECS Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECS SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA : Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA : Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fin&amp;Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCS Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCS Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCS Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCS Diamond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCS SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCS Video Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hunters CEUR/NEUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hunters WEUR/SEUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iMeet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IST Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Counter_for_RH__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Counter for RH</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company_Record_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>xHOLD-Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Companies</relationshipLabel>
        <relationshipName>Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Corporate_Entity__c</fullName>
        <formula>Account__r.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corporate Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Loader_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Just a simple flag to toggle on or off to fire triggers and/or workflows on the object. Setting this field should have no other impact.</description>
        <inlineHelpText>Just a simple flag to toggle on or off to fire triggers and/or workflows on the object. Setting this field should have no other impact.</inlineHelpText>
        <label>Data Loader Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>This is a temporary field.</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employee_Number_FairFax__c</fullName>
        <description>APAC enriched data - sourced from Far Fax</description>
        <inlineHelpText>Customer Emloyee Count - APAC enriched data - sourced from Far Fax</inlineHelpText>
        <label>Employee Number FairFax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Address__c</fullName>
        <formula>IF(
!ISBLANK(TESLA_Address1__c), 1, 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>temp-Has Address</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_City__c</fullName>
        <formula>IF(
!ISBLANK(TESLA_City__c), 1, 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>temp-Has City</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_Postal_Code__c</fullName>
        <formula>IF(
!ISBLANK(TESLA_Zip__c), 1, 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>temp-Has Postal Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_State__c</fullName>
        <formula>IF(
!ISBLANK(TESLA_StateCode__c), 1, 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>temp-Has State</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <description>Used to house Industry data, for now only for APAC</description>
        <label>Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Month_of_Revenue_Sum__c</fullName>
        <description>Used for data validation purposes with NS Migration on Q/C</description>
        <label>Last Month of Revenue Sum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>xHOLD-Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Companies</relationshipLabel>
        <relationshipName>Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_New__c</fullName>
        <formula>Owner_Copy__r.Location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location-New</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Industry_Code_Company_Level__c</fullName>
        <description>This is an APAC specific field - data was originally purchased from a 3rd Party provider</description>
        <inlineHelpText>APAC enriched data based on NAICS industry codes - see other NAICS fields for description</inlineHelpText>
        <label>NAICS Industry Code Company Level</label>
        <picklist>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>211</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2121</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2122</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>213</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2211</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2212</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2213</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>236</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>237</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>311</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>312</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>315</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>316</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>321</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>322</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>323</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>324</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>325</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3254</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>326</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>327</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>331</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>332</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>333</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>334</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>335</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>336</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>337</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>339</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NAICS_Industry_Code_Desc_Company_Level__c</fullName>
        <description>APAC enriched data based on NAICS industry codes description - see other NAICS fields for more details</description>
        <inlineHelpText>APAC enriched data based on NAICS industry codes description - see other NAICS fields for more details</inlineHelpText>
        <label>NAICS Industry Code Desc Company Level</label>
        <picklist>
            <picklistValues>
                <fullName>Accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounting, tax preparation, bookkeeping &amp; payroll services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administration of economic programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administration of environmental quality programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administration of housing programs, urban planning &amp; community development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administration of human resource programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative &amp; support services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising &amp; related services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambulatory health care services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amusement, gambling &amp; recreation industries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel, piece goods &amp; notions wholesalers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architectural, engineering &amp; related services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beverage &amp; tobacco product manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building material, garden equipment &amp; supplies dealers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical &amp; allied products wholesalers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical manufacturing (excluding pharmaceutical &amp; medicine)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clothing &amp; clothing accessories stores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coal mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer &amp; electronic product manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer systems design &amp; related services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction of buildings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Couriers &amp; messengers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit intermediation &amp; related activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Educational services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical &amp; electronic goods wholesalers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical equipment, appliance &amp; component manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical power generation, transmission &amp; distribution</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NAICS_Industry_Group_Desc_Company_Level__c</fullName>
        <description>APAC enriched data based on NAICS industry codes and descriptions - see other NAICS fields for description</description>
        <inlineHelpText>APAC enriched data based on NAICS industry codes and descriptions - see other NAICS fields for description</inlineHelpText>
        <label>NAICS Industry Group Desc Company Level</label>
        <picklist>
            <picklistValues>
                <fullName>Accommodation &amp; Food Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arts, Entertainment &amp; Recreation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Management and Scientific Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction &amp; Engineering Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance &amp; Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government &amp; Defence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health &amp; Community Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal &amp; Other Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transport &amp; Warehousing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utilities &amp; Waste Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesale &amp; Retail Trade</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NZL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NZL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_Prefix__c</fullName>
        <formula>IF(
OR(
           CONTAINS(LOWER(Name), &quot;*q*&quot;), 
           CONTAINS(LOWER(Name), &quot;*c*&quot;)), 
LEFT( Name,3 ), LEFT(Name, 5))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name *Prefix*</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>xHOLD-Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Companies</relationshipLabel>
        <relationshipName>Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Account_Owner__c</fullName>
        <formula>IF(
OwnerId =  Account__r.OwnerId, TRUE, FALSE
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner = Account Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Active__c</fullName>
        <formula>Owner:User.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Copy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Copy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Region_New__c</fullName>
        <formula>TEXT( Owner_Copy__r.Region__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Region-New</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Region__c</fullName>
        <description>Used to Test with Dashboard Reports</description>
        <label>Owner Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_18_ID__c</fullName>
        <formula>Id 
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1) 
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1) 
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC 18 ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Acct_ID__c</fullName>
        <formula>Account__r.SFDC_Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC Acct ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesRep_Removal__c</fullName>
        <label>SalesRep_Removal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supervisor_New__c</fullName>
        <formula>Owner_Copy__r.Manager.FirstName +&quot; &quot;+ Owner_Copy__r.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supervisor-New</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <label>Management Level Report</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TESLA_ADDDATE__c</fullName>
        <label>TESLA_ADDDATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TESLA_Address1__c</fullName>
        <label>TESLA-Address1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TESLA_Address2__c</fullName>
        <label>TESLA-Address2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TESLA_Address3__c</fullName>
        <label>TESLA-Address3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TESLA_BADCREDITDATE__c</fullName>
        <label>TESLA_BADCREDITDATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TESLA_BILLINGPOLICY__c</fullName>
        <label>TESLA_BILLINGPOLICY</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TESLA_BillingOptions__c</fullName>
        <label>TESLA-BillingOptions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TESLA_BlockedServices__c</fullName>
        <label>TESLA-BlockedServices</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TESLA_City__c</fullName>
        <label>TESLA-City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TESLA_CompanyID__c</fullName>
        <label>x-TESLA-CompanyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TESLA_CorporateEntityName__c</fullName>
        <label>TESLA-CorporateEntityName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TESLA_Corporate_Entity_ID__c</fullName>
        <label>TESLA-Corporate Entity ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TESLA_CountryCode__c</fullName>
        <label>TESLA-CountryCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TESLA_DUNSNUMBER__c</fullName>
        <label>TESLA_DUNSNUMBER</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TESLA_DefaultBillToIntlClientID__c</fullName>
        <label>TESLA-DefaultBillToIntlClientID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TESLA_DialogOptions__c</fullName>
        <label>TESLA-DialogOptions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TESLA_EXTERNALID__c</fullName>
        <label>TESLA_EXTERNALID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TESLA_EnterpriseID__c</fullName>
        <label>TESLA-EnterpriseID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TESLA_EnterpriseType__c</fullName>
        <label>TESLA-EnterpriseType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TESLA_Enterprise__c</fullName>
        <label>TESLA-Enterprise</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TESLA_InactiveDate__c</fullName>
        <label>TESLA-InactiveDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TESLA_IntlCompanyID__c</fullName>
        <description>This is an extrenal ID related to TESLA System. This an Key for TESLA Company Information Updates from Integration.</description>
        <externalId>true</externalId>
        <label>TESLA-Company ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TESLA_IntlCountryCode__c</fullName>
        <label>TESLA-IntlCountryCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TESLA_NOBLASTEMAIL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TESLA_NOBLASTEMAIL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TESLA_PasswordSecurityPolicyID__c</fullName>
        <label>TESLA-PasswordSecurityPolicyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TESLA_Province__c</fullName>
        <label>TESLA-Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TESLA_SALESMANAGER_ID__c</fullName>
        <description>unsure if this field does anything..copied values to it from the Tesla Owner Email field 8-22-2012 AEDD</description>
        <label>TESLA SALESMANAGER ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TESLA_SALESREP_EMAIL__c</fullName>
        <inlineHelpText>Used to add/remove users from the Account Team on the Account associated to this Company record.  This DOES NOT influence who the owner of the related Account record is.</inlineHelpText>
        <label>TESLA_OWNER_EMAIL</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TESLA_SALESREP_EXCEPTION__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TESLA SALESREP EXCEPTION</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TESLA_SICCODE__c</fullName>
        <label>TESLA_SICCODE</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TESLA_StateCode__c</fullName>
        <label>TESLA-StateCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TESLA_StatusLevel__c</fullName>
        <label>TESLA-StatusLevel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TESLA_SysID__c</fullName>
        <label>TESLA-SysID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TESLA_Territory_Code__c</fullName>
        <label>TESLA Territory Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TESLA_Zip__c</fullName>
        <label>TESLA-Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Billable_Licenses__c</fullName>
        <inlineHelpText>Sum of all Billable licenses THIS YEAR related to this company</inlineHelpText>
        <label>Total Billable Licenses</label>
        <summarizedField>ClientUsageInfo__c.Active_Billable__c</summarizedField>
        <summaryFilterItems>
            <field>ClientUsageInfo__c.UsageType__c</field>
            <operation>equals</operation>
            <value>Monthly Licenses</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ClientUsageInfo__c.AsOFTHISYEAR__c</field>
            <operation>equals</operation>
            <value>THIS YEAR</value>
        </summaryFilterItems>
        <summaryForeignKey>ClientUsageInfo__c.CompanyID__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Revenue__c</fullName>
        <inlineHelpText>Shows Billed Revenue for the previous 13 Months for this company. These are not commissionable totals.</inlineHelpText>
        <label>OLD-Billed Rev. - Prev. 13 Months</label>
        <summarizedField>ClientUsageInfo__c.Revenue__c</summarizedField>
        <summaryFilterItems>
            <field>ClientUsageInfo__c.UsageType__c</field>
            <operation>equals</operation>
            <value>Revenue</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ClientUsageInfo__c.AsofMonthDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>9/1/2012</value>
        </summaryFilterItems>
        <summaryForeignKey>ClientUsageInfo__c.CompanyID__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unmatch_Type__c</fullName>
        <label>x-Unmatch Type</label>
        <picklist>
            <picklistValues>
                <fullName>iMeet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Globalmeet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Conferencing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soundpath</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>temp_dedupe_value__c</fullName>
        <label>temp_dedupe value</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>temp_primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>temp for merging with no leading zeros to with leading zeros</description>
        <label>temp primary</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>